2001-01-22  Akim Demaille  <akim@epita.fr>

	* autoscan.pl ($dir, $autoconf): New.

2001-01-22  Akim Demaille  <akim@epita.fr>

	* autoscan.pl ($headers, $functions, $identifiers, $libraries):
	Also register locations of their requirement instead of a simple
	counter.
	(&check_configure_ac): Close TRACES.

2001-01-22  Akim Demaille  <akim@epita.fr>

	* autoscan.pl: Formatting changes.
	Check `configure.ac' or `configure.in' if present.

2001-01-22  Akim Demaille  <akim@epita.fr>

	* autoscan.pl (&wanted): Don't register `Makefile' when
	`Makefile.in' is present.
	Factor the simplification of $name.
	(&scan_makefile, &scan_sh_file): Instead of counting the number of
	occurrences where a program/makevar is wanted, register	file:line.
	Adjust the verbose output.
	(&check_configure_ac): Report the location where the macro is required.

2001-01-22  Akim Demaille  <akim@epita.fr>

	* autoscan.pl: Instead of undefined globals, set them to empty
	values.
	(%needed_macros): New.
	(&check_configure_ac): New.  Call it.
	(&output_libraries): Eve out from &output_programs.
	(&print_unique): For the time being register in %needed_macros
	only argument less macros.

2001-01-22  Lars J. Aas  <somelarsa@sim.no>

	* aclang.m4 (_AC_PROG_CXX_EXIT_DECLARATION): First try no declaration,
	then '#include <stdlib.h>', before trying the explicit declarations.

2001-01-22  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (_AC_COMPILE_IFELSE): Wrap the test -s in
	AC_TRY_COMMAND to improve config.log.
	(_AC_INIT_DEFAULTS): Don't define ac_exeext and ac_objext to
	highlight failures.

2001-01-22  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (_AC_OUTPUT_CONFIG_STATUS): Work around a currently
	impossible to describe bug of SunOS 4.1.3 which causes a shell
	crash when using `VAR=${VAR="$default"}'.
	Reported and diagnosed by Kevin Ryde.

2001-01-22  Akim Demaille  <akim@epita.fr>

	* acfunctions.m4 (AC_FUNC_GETGROUPS): Typo :(.

2001-01-22  Lars J. Aas  <larsa@sim.no>
