@@ -6287,12 +6287,13 @@ alternation and @code{egrep}.
 Don't rely on @command{ln} having a @option{-f} option.  Symbolic links
 are not available on old systems, use @samp{ln} as a fall back.
 
-The @sc{djgpp} @command{ln} emulates soft links for executables by
-generating a stub that in turn calls the real program.  This feature
-also works with nonexistent files like in the Unix spec. So @samp{ln -s
-src dst} will generate @file{src.exe} which will attempt to call
-@file{dst.exe}. But this feature only works for executables, therefore,
-don't rely on symbolic links on @sc{djgpp}.
+For versions of the @sc{djgpp} before 2.04, @command{ln} emulates soft
+links for executables by generating a stub that in turn calls the real
+program.  This feature also works with nonexistent files like in the
+Unix spec. So @samp{ln -s src dst} will generate @file{src.exe}, which
+will attempt to call @file{dst.exe} if run. But this feature only works
+for executables, so @command{cp} @option{-p} is used instead for these
+systems. @sc{djgpp} version 2.04 and later have full symlink support.
 
 
 @item @command{mv}
