@@ -1,3 +1,8 @@
+2001-01-22  Tim Van Holder  <tim.van.holder@pandora.be>
+
+	* acspecific.m4 (AC_PROG_LN_S): Detect DJGPP < 2.04, which only
+	supports 'ln -s' for executables.
+
 2001-01-22  Akim Demaille  <akim@epita.fr>
 
 	* autoscan.pl ($dir, $autoconf): New.
